[package]
name = "xmlrpc-sample"
version = "0.1.0"
authors = ["Danny Angelo Carminati Grein <fungos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmlrpc-proc = { version = "*", path = "../xmlrpc-proc" }
xmlrpc = "0.14.0"
